@@ -1,4 +1,4 @@
-// eCos memory layout - Fri Oct 20 05:56:55 2000
+// eCos memory layout - Tue Jul 02 10:03:04 2002
 
 // This is a generated file - do not edit
 
@@ -7,22 +7,22 @@
 MEMORY
 {
     ram : ORIGIN = 0, LENGTH = 0x2000000
-    rom : ORIGIN = 0xF0000000, LENGTH = 0x40000
+    rom : ORIGIN = 0xf0000000, LENGTH = 0x40000
 }
 
 SECTIONS
 {
     SECTIONS_BEGIN
-    SECTION_rom_vectors (rom, 0xF0000000, LMA_EQ_VMA)
+    SECTION_rom_vectors (rom, 0xf0000000, LMA_EQ_VMA)
     SECTION_text (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_fini (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_rodata (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_rodata1 (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_fixup (rom, ALIGN (0x4), LMA_EQ_VMA)
-    SECTION_mmu_tables (rom, ALIGN (0x4000), LMA_EQ_VMA)
     SECTION_gcc_except_table (rom, ALIGN (0x4), LMA_EQ_VMA)
+    SECTION_mmu_tables (rom, ALIGN (0x4000), LMA_EQ_VMA)
     SECTION_fixed_vectors (ram, 0x20, LMA_EQ_VMA)
-    SECTION_data (ram, 0x8000, FOLLOWING (.gcc_except_table))
+    SECTION_data (ram, 0x8000, FOLLOWING (.mmu_tables))
     SECTION_bss (ram, ALIGN (0x4), LMA_EQ_VMA)
     CYG_LABEL_DEFN(__heap1) = ALIGN (0x8);
     SECTIONS_END
